--- a/src/os2datascanner/projects/admin/adminapp/templates/components/scanstatus/scan_status_table.html
+++ b/src/os2datascanner/projects/admin/adminapp/templates/components/scanstatus/scan_status_table.html
@@ -100,7 +100,7 @@
                     {% csrf_token %}
                     {% trans "Do you really want to delete the status object for scanner '%(scanner_name)s'?" as r_u_sure %}
                     <button type="submit"
-                            class="button button--small button--grey"
+                            class="button"
                             onclick="return confirm(interpolate('{{ r_u_sure|escapejs }}', {'scanner_name': '{{ status.scanner.name|escapejs }}'}, true))"
                             title="{% trans 'Delete' %}">
                       <svg class="icon">
