--- a/src/os2datascanner/projects/admin/organizations/templates/organizations/account_list.html
+++ b/src/os2datascanner/projects/admin/organizations/templates/organizations/account_list.html
@@ -29,7 +29,8 @@
         hx-swap="outerHTML"
         hx-include="[id='dropdown_options']"
         hx-target=".account_content"
-        hx-select=".account_content">
+        hx-select=".account_content"
+        hx-push-url="true">
     <div class="search_field_wrapper">
       <input type="search"
              name="search_field"
@@ -44,7 +45,7 @@
   </form>
 
   {% if accounts %}
-    <div class="datatable-wrapper card account_content">
+    <div class="datatable-wrapper card account_content" hx-push-url="true">
       <table class="datatable">
         <colgroup>
           <col class="datatable__column--name">
